deploy/kubernetes/overlays/prod/client-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snake-duel-client
spec:
  ingressClassName: nginx
  rules:
    - host: snake.raphcvr.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snake-duel-client
                port:
                  name: http
